# pith

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  install.sh  manifest.json  package-lock.json  package.json  render.yaml  test-engine.js  test-engine.ts
.claude/agents/: code-reviewer.md  rust-pith.md
.claude/commands/: diagnose.md  test-routing.md  worktree-status.md
.claude/hooks/: README.md  rtk-rewrite.sh  rtk-suggest.sh
.claude/rules/: cli-testing.md  rust-patterns.md  search-strategy.md
.github/: CODEOWNERS  HOMEBREW_CORE_SUBMISSION.md  LABELS.md  ORG_SETUP.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-cli.yml  release-core.yml  release.yml
crates/pith-cli/: Cargo.toml
crates/pith-cli/src/: main.rs
crates/pith-core/: Cargo.toml
crates/pith-core/config/: default_weights.json
crates/pith-core/src/: ai_language.rs  constants.rs  convo.rs  dev_output.rs  domain.rs  engine.rs  eval.rs  input_router.rs  ir.rs  lib.rs  morphology.rs  opcode.rs  pipelines.rs  shared.rs  text_layers.rs  types.rs  weights.rs
crates/pith-core/src/adapters/: chat.rs  code.rs  diff.rs  generic.rs  logs.rs  mod.rs  spec.rs
crates/pith-core/tests/: conversation_ir_v2.rs  eval_metrics.rs  parity_contract.rs  parity_semantic_gate.rs
docs/: AI_CODING_SKILLS.md  HOMEBREW_CORE.md
feedback/: adapter-balanced-v1.jsonl  seed-realistic.jsonl
scripts/: install.sh
src/: App.tsx
(+35 files in other folders)
