[workspace]
members = [
  "crates/pith-core",
  "crates/pith-cli"
]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/pith-labs/pith"
authors = ["Pith Labs"]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
