[package]
name = "pith-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pith core engine for prompt/token distillation"

[lib]
name = "pith_core"
path = "src/lib.rs"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
